# Pellipop

./: .gitignore  .hgignore  Readme.md  pyproject.toml  readme.md  readme_en.md  requirements.txt  setup.py
.github/workflows/: hatch-build-and-publish.yml  pyinstaller-cross-platform.yml  python-publish.yml
i-frame_test/: i-frame_test.py  i-frame_test.sh
i-frame_test/test/: test.aac
linux-fix/: msgcat.py
minimal folder html/: test.html  test.py
pellipop/: Video.py  __about__.py  __init__.py  cli.py  fileFinder.py  file_finder.py  gui.py  main.py  old_main.py  path_fixer.py  pip.py  whisper_from_url.py
pellipop/speech_to_text/: deprecated_extractText.py  extractAudio.py  whisperMode.py
