[project.scripts]
pellipop = "pellipop.cli:main"
pellipop-cli = "pellipop.cli:main"
pellipop-gui = "pellipop.gui:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pellipop"
dynamic = ["version"]
description = "A graphical and command-line tool to extract key frames from videos along with their retranscription. It uses the Whisper API to transcribe the audio. It also generates a CSV file with the extracted key frames and their corresponding text."
readme = "readme.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
license = "MPL-2.0"
license-file = "LICENSE.txt"
keywords = [
    "video",
    "keyframes",
    "frame",
    "speech",
    "speech-to-text",
    "transcription",
    "STT",
    "panoptic",
]
authors = [
    { name = "Marceau-h", email = "pypi@marceau-h.fr" },
    { name = "Orion Alié", email = "someonefefe@gmail.com" },
    { name = "EdouardBoute", email = "" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent", 
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "ffmpeg",
    "requests~=2.31.0",
#    "SpeechRecognition",
    "tqdm~=4.66.1",
    "ttkbootstrap~=1.10.1",
    "validators~=0.22.0",
    "whisper-client==0.3.1",
]

[project.urls]
Homepage = "https://github.com/CERES-Sorbonne/Pellipop"
Documentation = "https://github.com/CERES-Sorbonne/Pellipop#readme"
Issues = "https://github.com/CERES-Sorbonne/Pellipop/issues"
Source = "https://github.com/CERES-Sorbonne/Pellipop"

[tool.hatch.version]
path = "pellipop/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pellipop",
]

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
target-version = ["py310", "py311", "py312", "py313"]
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["pellipop"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["pellipop", "tests"]
branch = true
parallel = true
omit = [
    "pellipop/__about__.py",
]

[tool.coverage.paths]
pellipop = ["pellipop"]


[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
